updated css to add the social links at the top right

--- a/previous-versions/index-1.0.html
+++ b/previous-versions/index-1.0.html
@@ -13,16 +13,12 @@
 <body>
     <div class="portfolio-content">
         <div class="name-section">
-            <div class="name-top-left">
-                <div class="js-name name" onclick="changeName();">
-                    <p class="actual-name"><span class='big-post-name'>Iftu Bin Misbah</span></p>
-                </div>
+            <div class="js-name name" onclick="changeName();">
+                <p><span class='big-post-name'>Iftu Bin Misbah</span></p>
             </div>
-            <div class="name-top-right">
-                <div class="social-media-links">
-                    <a href="https://www.linkedin.com/in/wsamio/"><img src="images/social/linkedin.png"></a>
-                    <a href="https://facebook.com/misbahsamio/"><img src="images/social/facebook.png"></a>
-                </div>
+            <div class="social-media-links">
+                <a href="https://www.linkedin.com/in/wsamio/"><img src="images/social/linkedin.png"></a>
+                <a href="https://facebook.com/misbahsamio/"><img src="images/social/facebook.png"></a>
             </div>
         </div>
         <hr>
