added javascript todo list project

--- a/index.html
+++ b/index.html
@@ -37,14 +37,24 @@
                 <div class="topic-title">
                     <p class="topic-name">JavaScript</p>
                 </div>
-                <a class="project-link" href="https://wsamio.github.io/JavaScript/Projects/Rock-Paper-Scissors/index.html">
-                    <div class="project-cart" >
-                        <img src="images/javascript-rock-paper-scissors.jpg">
-                        <div class="project-cart-title">
-                            Rock Paper Scissors Game
+                <div class="projects">
+                    <a class="project-link" href="https://wsamio.github.io/JavaScript/Projects/Rock-Paper-Scissors/index.html">
+                        <div class="project-cart" >
+                            <img src="images/project/javascript/javascript-rock-paper-scissors.jpg">
+                            <div class="project-cart-title">
+                                Rock Paper Scissors Game
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                    <a class="project-link" href="https://wsamio.github.io/JavaScript/Projects/Todo-List/index.html">
+                        <div class="project-cart" >
+                            <img src="images/project/javascript/javascript-todo-list.jpg">
+                            <div class="project-cart-title">
+                                Todo List
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
