--- a/JavaScript/Projects/Todo-List/index.html
+++ b/JavaScript/Projects/Todo-List/index.html
@@ -16,7 +16,7 @@
         <div class="todo-input-grid">
             <input class="js-todo-input name-input" placeholder="Todo name">
             <input class="js-date-input due-date-input" type="date">
-            <button class="add-todo-button" onclick="addTodo();">
+            <button class="js-add-todo-button add-todo-button">
                 Add
             </button>
         </div>
