added dynamic link so projects can be accessed from both github and vercel

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p class="topic-name">JavaScript</p>
                 </div>
                 <div class="projects">
-                    <a class="project-link" href="https://wsamio.github.io/JavaScript/Projects/Rock-Paper-Scissors/index.html">
+                    <a class="project-link" id="rock-paper-scissors">
                         <div class="project-cart" >
                             <img src="images/project/javascript/javascript-rock-paper-scissors.jpg">
                             <div class="project-cart-title">
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="project-link" href="https://wsamio.github.io/JavaScript/Projects/Todo-List/index.html">
+                    <a class="project-link" id="todo-list">
                         <div class="project-cart" >
                             <img src="images/project/javascript/javascript-todo-list.jpg">
                             <div class="project-cart-title">
