added view resume section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <p class="bio">
                 A Machine Learning Engineer with a passion for learning absolutely anything.
             </p>
+            <a class="resume" id="resume">
+                My Resume
+            </a>
         </div>
         <div class="project-section">
             <h2>Projects</h2>
@@ -58,7 +61,6 @@
             </div>
         </div>
     </div>
-
     <script src="scripts/main.js"></script>
 </body>
 </html>
